fixed swagger and completed contacts
